objects/LAT_SchedulerConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <label>Apex Class</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour__c</fullName>
        <label>Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minute__c</fullName>
        <label>Minute</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduler__c</fullName>
        <label>Scheduler</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>LAT Scheduler Config</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Apex_Class__c</columns>
        <columns>Batch_Size__c</columns>
        <columns>Day__c</columns>
        <columns>Hour__c</columns>
        <columns>Minute__c</columns>
        <columns>Scheduler__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>